<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="界面设置"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="显示设备"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk1_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/bluenrg" />

        <CheckBox
            android:id="@+id/chk2_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/amdtp" />

        <CheckBox
            android:id="@+id/chk3_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/ota" />

        <CheckBox
            android:id="@+id/chk4_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/tag" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="显示模块"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk5_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/title_ep_control" />

        <CheckBox
            android:id="@+id/chk6_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/commandTest" />

        <CheckBox
            android:id="@+id/chk7_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/inDB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk8_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/temperature" />

        <CheckBox
            android:id="@+id/chk9_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/title_location" />

        <CheckBox
            android:id="@+id/chk10_devicelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/chk_selector"
            android:checked="true"
            android:text="@string/title_station" />
    </LinearLayout>

    <Button
        android:id="@+id/btn1_ok"
        style="@style/ButtonStyleA"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="OK" />

</LinearLayout>