<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_bluetooth_read_write"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_readwrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:srcCompat="@drawable/btn_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/title_read_write"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn0"
                style="@style/ButtonStyleA"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/btn_clear"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_openDoor"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_readCar"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn3"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_batteryVol"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn4"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_magStr"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn5"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_doorState"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_test1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn7"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="开一号门锁"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="开二号门锁"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn9"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="开全部门锁"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn10"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="查询内部控制参数"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn11"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="修改内部控制参数"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>